--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Varino';
-  src: url('assets/fonts/Varino.ttf') format('truetype');
+  src: url('../assets/fonts/Varino.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -238,7 +238,7 @@ color: #FF6B00;
 
 .hero {
   display: flex;
-  height: 68rem;
+  height: 64rem;
   overflow: hidden;
   position: relative;
   box-shadow: 0 -0.4rem 0.4rem -0.2rem rgba(0, 0, 0, 0.1);
@@ -300,7 +300,6 @@ color: #FF6B00;
   font-weight: bold;
   transition: transform 1s ease;
   margin-top: 2rem;
-
 }
 
 .hero-btn:hover {
@@ -398,7 +397,7 @@ color: #FF6B00;
 .bikes-hybrid {
   flex: 1;
   border-radius: 5rem;
-  background-image: url('assets/images/hybrid.avif');
+  background-image: url('../assets/images/hybrid.avif');
   background-size: cover;
   background-position: center;
   height:46rem;
@@ -417,7 +416,7 @@ color: #FF6B00;
 .bikes-electric {
   flex: 1;
   border-radius: 5rem;
-  background-image: url('assets/images/electric.avif');
+  background-image: url('../assets/images/electric.avif');
   background-size: cover;
   background-position: center;
   height:46rem;
@@ -456,7 +455,7 @@ color: #FF6B00;
   display: flex;
   height: 38rem;
   padding: 2rem;
-  background-image: url('assets/images/build.jpg');
+  background-image: url('../assets/images/build.jpg');
   background-size: cover;
   border-radius: 5rem;
 }
@@ -548,7 +547,7 @@ color: #FF6B00;
 
 .reviews-client-E {
   border-radius: 5rem;
-  background-image: url('assets/images/reviews-E.jpg');
+  background-image: url('../assets/images/reviews-E.jpg');
   background-size: cover;
   height: 38rem;
   width:38rem;
@@ -560,7 +559,7 @@ color: #FF6B00;
 
 .reviews-client-H {
   border-radius: 5rem;
-  background-image: url('assets/images/reviews-H.jpeg');
+  background-image: url('../assets/images/reviews-H.jpeg');
   background-size: cover;
   height: 38rem;
   width:38rem;
@@ -675,7 +674,7 @@ color: #FF6B00;
 .parts {
   flex: 1;
   border-radius: 5rem;
-  background-image: url('assets/images/parts01.jpg');
+  background-image: url('../assets/images/parts01.jpg');
   background-size: cover;
   height:38rem;
   padding: 1rem 2rem;
@@ -695,7 +694,7 @@ color: #FF6B00;
 .accessories {
   flex: 1;
   border-radius: 5rem;
-  background-image: url('assets/images/acc01.jpg');
+  background-image: url('../assets/images/acc01.jpg');
   background-size: cover;
   height:38rem;
   padding: 1rem 2rem;
@@ -708,7 +707,7 @@ color: #FF6B00;
 .merch {
   flex: 1;
   border-radius: 5rem;
-  background-image: url('assets/images/merch01.png');
+  background-image: url('../assets/images/merch01.png');
   background-size: cover;
   height:38rem;
   padding: 1rem 2rem;
@@ -739,16 +738,16 @@ color: #FF6B00;
 }
 
 .parts:hover {
-  background-image: url('assets/images/parts02.jpg');
+  background-image: url('../assets/images/parts02.jpg');
   transition: background-image 1s ease; 
 }
 .accessories:hover {
-  background-image: url('assets/images/acc02.jpg');
+  background-image: url('../assets/images/acc02.jpg');
   transition: background-image 1s ease;
    
 }
 .merch:hover {
-  background-image: url('assets/images/merch02.png');
+  background-image: url('../assets/images/merch02.png');
   transition: background-image 1s ease; 
 }
 
@@ -758,7 +757,7 @@ color: #FF6B00;
 }
 
 .community-container {
-  background-image: url('assets/images/community.png');
+  background-image: url('../assets/images/community.png');
   height: 50rem;
   padding: 2rem;
   border-radius: 5rem;
@@ -1067,7 +1066,7 @@ footer {
 .footer-action {
   flex: 1;
   padding: 4rem;
-  background-image: url('assets/images/footer.jpg');
+  background-image: url('../assets/images/footer.jpg');
   background-size: cover;
   background-position: center;
   border-radius: 5rem;
