--- a/style/style.css
+++ b/style/style.css
@@ -15,13 +15,11 @@ html {
 body {
   font-family: "Ubuntu", sans-serif;
   background-color:white;
-  margin: 0;
   padding: 0;
   box-sizing: border-box;
   max-width: 90%;
-  margin: auto;
-  font-size: 1.8rem;
-  overflow-y: auto;     
+  margin: 0 auto;
+  font-size: 1.8rem;     
 }
 
 @media (max-width:1500px) {
@@ -300,7 +298,7 @@ color: #FF6B00;
   list-style: none;
   padding: 1rem 0;
   text-align: center;
-  font-size: 2.8rem;
+  font-size: 3rem;
   font-weight: bold;
 }
 
